# wesos

./: .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  compile_flags.txt  wesos-make.Dockerfile
src/boot/: CMakeLists.txt  create_disk.sh
src/boot/include/boot/: EFI.hh  Logger.hh  Memory.hh  MemoryMap.hh  Storage.hh
src/boot/iso/boot/grub/: grub.cfg
src/boot/src/: Boot.cc  EFI.hh  Memory.cc  MemoryMap.cc  Storage.cc
src/func/: CMakeLists.txt
src/func/libhello-world/: CMakeLists.txt
src/func/libwesos-assert/: CMakeLists.txt
src/func/libwesos-assert/include/wesos-assert/: Assert.hh
src/func/libwesos-assert/src/: Assert.cc
src/func/libwesos-assert/test/: AlwaysAssert.cc  Assert.cc  AssertInvariantDebugOff.cc  AssertInvariantDebugOn.cc
src/func/libwesos-builtin/: CMakeLists.txt
src/func/libwesos-builtin/test/: Move.cc
src/func/libwesos-heap/: CMakeLists.txt
src/func/libwesos-heap/bench/: .clang-tidy  IntrusiveChainFirstFit.cc  IntrusivePool.cc  UnifiedBenchmark.cc  UnifiedBenchmark.hh
src/func/libwesos-heap/include/wesos-heap/: ContiguousIntrusiveHeap.hh  ElementaryIntrusiveHeap.hh  HeapProtocol.hh  IntrusiveChainBestFit.hh  IntrusiveChainFirstFit.hh  IntrusivePool.hh
src/func/libwesos-heap/src/: ContiguousIntrusiveHeap.cc  ElementaryIntrusiveHeap.cc  HeapProtocol.cc  IntrusiveChainFirstFit.cc  IntrusivePool.cc
src/func/libwesos-heap/test/: ContiguousIntrusiveHeap.cc  IntrusiveChainFirstFit.cc  IntrusivePool.cc
src/func/libwesos-lambda/: CMakeLists.txt
src/func/libwesos-lambda/include/wesos-lambda/: Lambda.hh
src/func/libwesos-lambda/test/: Lambda.cc
src/func/libwesos-mem/: CMakeLists.txt
src/func/libwesos-mem/bench/: IntrusiveChainFirstFit.cc  IntrusivePool.cc  UnifiedBenchmark.cc  UnifiedBenchmark.hh
src/func/libwesos-mem/include/wesos-mem/: HeapProtocol.hh  IntrusiveChainBestFit.hh  IntrusiveChainFirstFit.hh  MemoryResourceProtocol.hh
src/func/libwesos-mem/src/: IntrusiveChainFirstFit.cc  MemoryResourceProtocol.cc
src/func/libwesos-mem/test/: IntrusiveChainFirstFit.cc  IntrusivePool.cc
src/func/libwesos-smartptr/: CMakeLists.txt
src/func/libwesos-smartptr/bench/: IntrusivePool.cc
src/func/libwesos-smartptr/src/: Box.cc  Rc.cc
src/func/libwesos-smartptr/test/: Arc.cc  Rc.cc
src/func/libwesos-sync/: CMakeLists.txt
src/func/libwesos-sync/include/wesos-sync/: Atomic.hh  LockProtocol.hh  MemoryOrder.hh  SpinLock.hh  Timing.hh
src/func/libwesos-sync/src/: SpinLock.cc  Timing.cc
src/func/libwesos-types/: CMakeLists.txt
src/func/libwesos-types/include/wesos-types/: Array.hh  ClampLeast.hh  ClampMost.hh  Group.hh  Lambda.hh  Least.hh  Most.hh  Null.hh  Nullable.hh  NullableOwnPtr.hh  NullablePtrBase.hh  NullableRefPtr.hh  Numeric.hh  OwnPtr.hh  Pointer.hh  PowerOfTwo.hh  Primitive.hh  PtrBase.hh  RefPtr.hh  ReflectionCallback.hh  StrongOrdering.hh  Template.hh  Types.hh  Untrusted.hh  Unused.hh  View.hh
src/func/libwesos-types/test/: Array.cc  Null.cc  Numeric.cc  Primitive.cc
src/kern/: CMakeLists.txt  linker.ld
src/kern/include/wesos-kern/boot/: KernSettings.hh  Options.hh
src/kern/src/: kmain.cc
src/kern/src/boot/: KernSettings.cc  KernelSettings.example.conf  Main.cc  SetupRuntime.cc  Start.cc  kmain.cc  kstart.cc
src/libs/: CMakeLists.txt
src/libs/libwesos-alloc/: CMakeLists.txt
src/libs/libwesos-alloc/bench/: IntrusivePool.cc  UnifiedBenchmark.cc
src/libs/libwesos-alloc/include/wesos-alloc/: FreeList.hh  IntrusivePool.hh
src/libs/libwesos-alloc/src/: FreeList.cc  IntrusivePool.cc
src/libs/libwesos-alloc/test/: IntrusivePool.cc
src/libs/libwesos-assert/: CMakeLists.txt
src/libs/libwesos-assert/include/wesos-assert/: Assert.hh
src/libs/libwesos-assert/src/: Assert.cc
src/libs/libwesos-assert/test/: AlwaysAssert.cc  Assert.cc  AssertInvariantDebugOff.cc  AssertInvariantDebugOn.cc  NDEBUG.cc
src/libs/libwesos-builtin/: CMakeLists.txt
src/libs/libwesos-builtin/include/wesos-builtin/: Export.hh  Memory.hh  Move.hh  Range.hh  SourceLocation.hh
src/libs/libwesos-builtin/src/: Empty.cc  Memory.cc
src/libs/libwesos-builtin/test/: Memory.cc  Move.cc  SourceLocation.cc  placeholder.cc
src/libs/libwesos-cpu/: CMakeLists.txt
src/libs/libwesos-cpu/src/: Placeholder.cc  Timing.cc
src/libs/libwesos-cpu/test/: placeholder.cc
src/libs/libwesos-kernconf/: CMakeLists.txt
src/libs/libwesos-kernconf/src/: Config.cc  ParseConfig.cc
src/libs/libwesos-kernconf/test/: Parser.cc
src/libs/libwesos-lambda/: CMakeLists.txt
src/libs/libwesos-lambda/test/: Lambda.cc
src/libs/libwesos-mem/: CMakeLists.txt
src/libs/libwesos-mem/bench/: IntrusiveChainFirstFit.cc  IntrusivePool.cc  UnifiedBenchmark.cc  UnifiedBenchmark.hh
src/libs/libwesos-mem/src/: AtomicMemoryEconomy.cc  AtomicResource.cc  IntrusiveChainFirstFit.cc  IntrusivePool.cc  Memory.cc  MemoryEconomy.cc  MemoryResourceProtocol.cc  NullResource.cc  TracingResource.cc
src/libs/libwesos-mem/test/: Empty.cc  IntrusiveChainFirstFit.cc  IntrusivePool.cc  MemoryResourceProtocol.cc  NullResource.cc  TracingResource.cc
src/libs/libwesos-smartptr/: CMakeLists.txt
src/libs/libwesos-smartptr/bench/: Box.cc
src/libs/libwesos-smartptr/src/: Arc.cc  Box.cc  Rc.cc
src/libs/libwesos-smartptr/test/: Arc.cc  Box.cc  Helper.hh  Rc.cc
src/libs/libwesos-stream/: CMakeLists.txt
src/libs/libwesos-stream/src/: AtomicInput.cc  AtomicInputStream.cc  AtomicOutputStream.cc  AtomicStream.cc  EmptyInput.cc  InputStreamProtocol.cc  NullOutput.cc  OutputStreamProtocol.cc  Stream.cc  StreamProtocol.cc
src/libs/libwesos-stream/test/: IStream.cc  InputStreamProtocol.cc  OStream.cc  OutputStreamProtocol.cc  Stream.cc  StreamProtocol.cc
src/libs/libwesos-sync/: CMakeLists.txt
src/libs/libwesos-sync/src/: SpinLock.cc
src/libs/libwesos-sync/test/: Atomic.cc  SpinLock.cc
src/libs/libwesos-types/: CMakeLists.txt
src/libs/libwesos-types/test/: Array.cc  Lambda.cc  Move.cc  Null.cc  Numeric.cc  Primitive.cc  ReflectionCallback.cc  StrongOrdering.cc
(+84 files in other folders)
